--- a/use_case_RH_dev_v1.0/html/listeDomaine.html
+++ b/use_case_RH_dev_v1.0/html/listeDomaine.html
@@ -64,7 +64,7 @@
 	<div class="content">
 		<footer>
              <div id="centered">
-            <a href="redirectionRH.html?rh">
+            <a href="exempleRH.html">
                 <div id="autreChose">
                     Je cherche autre chose
                 </div>
