--- a/use_case_RH_dev_v1.0/html/listeDomaine.html
+++ b/use_case_RH_dev_v1.0/html/listeDomaine.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+﻿<! DOCTYPE html>
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/commun.css">
 	<link rel="stylesheet" type="text/css" href="css/listeDomaine.css">
  </head>
- <title>Liste des domaines</title>
+ <title>Liste des domaines IT</title>
  <header>
 	<div class="content">
 		<div class="header">
@@ -32,7 +32,7 @@
 		</a>
 		<a href="domaines/infos/modelisateur.html">
 			<div class="domaine right">
-				Modélisateur
+				B.I.
 				<br/>
 			</div>
 		</a>
