--- a/use_case_RH_dev_v1.0/html/informations.html
+++ b/use_case_RH_dev_v1.0/html/informations.html
@@ -48,7 +48,7 @@
 
     <footer>
         <div id="centered">
-            <a href="redirectionRH.html?rh">
+            <a href="choixProspect.html">
                 <div id="autreChose">
                     Je cherche autre chose
                 </div>
