--- a/use_case_RH_dev_v1.0/html/calculatrice.html
+++ b/use_case_RH_dev_v1.0/html/calculatrice.html
@@ -20,6 +20,7 @@
 	</div>
  </header>
  <body>
+    <div id="popup"> </div>
  	<div class="bloc">
 		<p class="blockName">A. S'informer et comprendre</p>
 		<table>
