--- a/use_case_RH_dev_v1.0/html/franceInternational.html
+++ b/use_case_RH_dev_v1.0/html/franceInternational.html
@@ -12,6 +12,7 @@
  </head>
  <title>Stage</title>
  <body>
+    <div id="popup"> </div>
 	<div class="pays boutons">
 		<div class="pastilleChoix">France</div>
 	</div>
