--- a/use_case_RH_dev_v1.0/html/index.html
+++ b/use_case_RH_dev_v1.0/html/index.html
@@ -11,9 +11,7 @@
  <title>Index</title>
  <body>
 	 <div class="boutonChoix">
-        <a href="panelAdmin.html">
-		<div class="menuEntree">
-        <!-- <div id="panelAdmin" class="menuEntree"> -->
+		<div id="panelAdmin" class="menuEntree">
 			<img src="images/parametrage.png"/>
 		</div><br>
 		<span class="menuId">Panel des paramétrages</span>
@@ -26,32 +24,32 @@
 		</a><br>
 		<span class="menuId">Lancer l'application forum </span>
 	</div>
-	<!-- <div id="adminConnection"> -->
-		<!-- <div class="modalContent"> -->
-		 <!-- <span class="close">&times;</span><br> -->
-			<!-- <table id="identification"> -->
-				<!-- <tr> -->
-					<!-- <th colspan="2">Veuillez vous connecter</th> -->
-				<!-- </tr> -->
-				<!-- <tr> -->
-					<!-- <td class="infos pwd" colspan="2">Mot de passe incorrect</td> -->
-				<!-- </tr> -->
-				<!-- <tr> -->
-					<!-- <td class="infos ident" colspan="2">Identifiant incorrect</td> -->
-				<!-- </tr> -->
-				<!-- <tr> -->
-					<!-- <td class="cell"><label for="idUser">Identifiant : </label></td> -->
-					<!-- <td class="cell"><input id="idUser" type="text" class="inputUser"/></td> -->
-				<!-- </tr> -->
-				<!-- <tr> -->
-					<!-- <td class="cell"><label for="motDePasse">Mot de passe : </label></td> -->
-					<!-- <td class="cell"><input id="motDePasse" type="password" class="inputUser"/></td> -->
-				<!-- </tr> -->
-			<!-- </table> -->
-			<!-- <a id="submit"> -->
-				<!-- Se connecter -->
-			<!-- </a> -->
-		<!-- </div> -->
-	<!-- </div> -->
+	<div id="adminConnection">
+		<div class="modalContent">
+		 <span class="close">&times;</span><br>
+			<table id="identification">
+				<tr>
+					<th colspan="2">Veuillez vous connecter</th>
+				</tr>
+				<tr>
+					<td class="infos pwd" colspan="2">Mot de passe incorrect</td>
+				</tr>
+				<tr>
+					<td class="infos ident" colspan="2">Identifiant incorrect</td>
+				</tr>
+				<tr>
+					<td class="cell"><label for="idUser">Identifiant : </label></td>
+					<td class="cell"><input id="idUser" type="text" class="inputUser"/></td>
+				</tr>
+				<tr>
+					<td class="cell"><label for="motDePasse">Mot de passe : </label></td>
+					<td class="cell"><input id="motDePasse" type="password" class="inputUser"/></td>
+				</tr>
+			</table>
+			<a id="submit">
+				Se connecter
+			</a>
+		</div>
+	</div>
  </body>
  </html>
