--- a/use_case_RH_dev_v1.0/html/informations.html
+++ b/use_case_RH_dev_v1.0/html/informations.html
@@ -19,6 +19,7 @@
 	</div>
  </header>
  <body>
+    <div id="popup"> </div>
     <div class="content">
 	
 		<a href="quizzs/sogé.html">
@@ -35,14 +36,12 @@
 		</a>
 		
 			<div class="domaine left">
-				informations sur la société générale 
+				Informations sur la société générale 
 			</div>
 		
 			<div class="domaine right">
-				informations sur le projet Pepper RH
-			</div>
-	
-		
+				Informations sur le projet Pepper RH
+			</div>		
 	</div>
 	
 
