--- a/use_case_RH_dev_v1.0/html/listeDomaine.html
+++ b/use_case_RH_dev_v1.0/html/listeDomaine.html
@@ -1,4 +1,4 @@
-﻿<! DOCTYPE html>
+<! DOCTYPE html>
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/commun.css">
 	<link rel="stylesheet" type="text/css" href="css/listeDomaine.css">
  </head>
- <title>Liste des domaines IT</title>
+ <title>Liste des domaines</title>
  <header>
 	<div class="content">
 		<div class="header">
@@ -23,6 +23,7 @@
 	</div>
  </header>
  <body>
+    <div id="popup"> </div>
 	<div class="content">
 		<a href="domaines/infos/securite.html">
 			<div class="domaine left">
@@ -32,7 +33,7 @@
 		</a>
 		<a href="domaines/infos/modelisateur.html">
 			<div class="domaine right">
-				B.I.
+				Modélisateur
 				<br/>
 			</div>
 		</a>
@@ -59,12 +60,49 @@
 				Infrastructure
 			</div>
 		</a>
+		
+				<a href="domaines/infos/securite.html">
+			<div class="domaine left">
+				Conseil/Inspection Générale
+				<br/>
+			</div>
+		</a>
+		<a href="domaines/infos/modelisateur.html">
+			<div class="domaine right">
+				Fusions-Acquisitions/ECM
+				<br/>
+			</div>
+		</a>
+		<a href="domaines/infos/dataScientist.html">
+			<div class="domaine left">
+				Data scientist
+				<br/>
+			</div>
+		</a>
+		<a href="domaines/infos/it.html">
+			<div class="domaine right">
+				IT
+				<br/>
+			</div>
+		</a>
+		<a href="domaines/infos/innovation.html">
+			<div class="domaine left">
+				Innovation
+				<br/>
+			</div>
+		</a>
+		<a href="calculatrice.html">
+			<div class="domaine right">
+				Infrastructure
+			</div>
+		</a>
+		
 	</div>
  </body>
 	<div class="content">
 		<footer>
              <div id="centered">
-            <a href="exempleRH.html">
+            <a href="redirectionRH.html?rh">
                 <div id="autreChose">
                     Je cherche autre chose
                 </div>
