--- a/use_case_RH_dev_v1.0/html/ecranAccueilAppli.html
+++ b/use_case_RH_dev_v1.0/html/ecranAccueilAppli.html
@@ -15,9 +15,11 @@
 	<script src="js/tools.js"></script>
 	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 
- </head>
+ </head>    
  <title>Ecran accueil</title>
+
  <body>
+    <div id="popup" class="ignore-css"></div>
 	<div class="container demo-3">
 		<div class="content">
 			<div id="large-header" class="large-header">
@@ -26,4 +28,5 @@
 			</div>
 		</div>
 	</div>
+ </body>
  </html>
