--- a/use_case_RH_dev_v1.0/html/redirectionRH.html
+++ b/use_case_RH_dev_v1.0/html/redirectionRH.html
@@ -10,6 +10,7 @@
  </head>
  <title>Redirection RH</title>
  <body>
+    <div id="popup"> </div>
 	<div class="photo">
 		<img id="photoRedirection"/>
 		<span id="nomIntervenant"></span>
