Revert "v1.1 merging dev"
This reverts commit eb5a46e0e17f86e9024e356a4eeb3105cd19d15b.

--- a/use_case_RH_dev_v1.0/html/Mood.html
+++ b/use_case_RH_dev_v1.0/html/Mood.html
@@ -17,7 +17,7 @@
     <div id="popup"> </div>
  	<div class="yesNo boutons">
 		<div class="pastilleChoix" name="oui">
-			<img src="images/happiness.png">
+			<img src="images/happiness.png" name="coucou">
 		</div>
 	</div>
 	<div class="yesNo boutons">
@@ -25,6 +25,6 @@
 			<img src="images/indifferent.png"/>
 		</div>
 	</div>
-    <!-- <a href="#null" onclick="popupConnexion()">Ouvrir la Pop-Up</a> -->
+    <a href="#null" onclick="popupConnexion()">Ouvrir la Pop-Up</a>
  </body>
  </html>
