--- a/use_case_RH_dev_v1.0/html/informations.html
+++ b/use_case_RH_dev_v1.0/html/informations.html
@@ -19,7 +19,6 @@
 	</div>
  </header>
  <body>
-    <div id="popup"> </div>
     <div class="content">
 	
 		<a href="quizzs/sogé.html">
@@ -36,12 +35,14 @@
 		</a>
 		
 			<div class="domaine left">
-				Informations sur la société générale 
+				informations sur la société générale 
 			</div>
 		
 			<div class="domaine right">
-				Informations sur le projet Pepper RH
-			</div>		
+				informations sur le projet Pepper RH
+			</div>
+	
+		
 	</div>
 	
 
