--- a/use_case_RH_dev_v1.0/html/choixProspect.html
+++ b/use_case_RH_dev_v1.0/html/choixProspect.html
@@ -13,7 +13,6 @@
  </head>
  <title>Choix du thème du dialogue</title>
  <body>
-    <div id="popup"> </div>
  	<div id="alternance" class="boutonIcone">
 		<div class="choixProspect">
 			<img src="images/alternance.png"/>
@@ -21,48 +20,39 @@
 		<br>
 		<span>Une alternance</span>
 	</div>
-	<div id="cdi" class="boutonIcone">
-		<div class="choixProspect">
-			<img src="images/cdi.png"/>
-		</div>
-		<br>
-		<span>Un CDI</span>
-	</div>
-	<div id="stage" class="boutonIcone">
+	 
+	 <div id="stage" class="boutonIcone">
 		<div class="choixProspect">
 			<img src="images/stage.png"/>
 		</div>
 		<br>
 		<span>Un stage</span>
 	</div>
-	<div id="cesure" class="boutonIcone">
-		<div class="choixProspect">
-			<img src="images/cesure.png"/>
-		</div>
-		<br>
-		<span>Une césure</span>
-	</div>
-	<div id="informations" class="boutonIcone">
-		<div class="choixProspect">
-			<img src="images/info.png"/>
-		</div>
-		<br>
-		<span>Des informations<span>
-	</div>
-	<div id="cdd" class="boutonIcone">
-		<div class="choixProspect">
-			<img src="images/cdd.png"/>
-		</div>
-		<br>
-		<span>Un CDD</span>
-	</div>
-	<div id="vie" class="boutonIcone">
+	 
+	 <div id="vie" class="boutonIcone">
 		<div class="choixProspect">
 			<img src="images/vie.png"/>
 		</div>
 		<br>
 		<span>Un VIE</span>
 	</div>
+	 
+	<div id="cdi" class="boutonIcone">
+		<div class="choixProspect">
+			<img src="images/cdi.png"/>
+		</div>
+		<br>
+		<span>Un CDI/CDD</span>
+	</div>
+	 
+	<div id="informations" class="boutonIcone">
+		<div class="choixProspect">
+			<img src="images/info.png"/>
+		</div>
+		<br>
+		<span>Des informations<span>
+
+	
  </body>
  <footer>
     <img id="logo" src="images/LogoSoge.png"></img>
