--- a/use_case_RH_dev_v1.0/html/informations.html
+++ b/use_case_RH_dev_v1.0/html/informations.html
@@ -34,12 +34,15 @@
 			</div>
 		</a>
 		
+		
 			<div class="domaine left">
 				informations sur la société générale 
 			</div>
 		
+		
+		
 			<div class="domaine right">
-				informations sur le projet Pepper RH
+				qui suis je ? 
 			</div>
 	
 		
