--- a/use_case_RH_dev_v1.0/html/informations.html
+++ b/use_case_RH_dev_v1.0/html/informations.html
@@ -53,7 +53,7 @@
         <div id="centered">
             <a href="choixProspect.html">
                 <div id="autreChose">
-                    Je cherche autre chose
+                    Retour
                 </div>
             </a>
         </div>
