--- a/use_case_RH_dev_v1.0/html/OuiNon.html
+++ b/use_case_RH_dev_v1.0/html/OuiNon.html
@@ -13,12 +13,12 @@
  <title>oui / non</title>
  <body>
  	<div class="yesNo boutons">
-		<div class="pastilleChoix">
+		<div class="pastilleChoix dialogable" name="oui">
 			Oui
 		</div>
 	</div>
 	<div class="yesNo boutons">
-		<div class="pastilleChoix">
+		<div class="pastilleChoix dialogable" name="non">
 			Non
 		</div>
 	</div>
