--- a/use_case_RH_dev_v1.0/html/calculatrice.html
+++ b/use_case_RH_dev_v1.0/html/calculatrice.html
@@ -8,15 +8,16 @@
 	<script src = "js/jquery-3.1.1.min.js"></script>
 	<script src = "js/calculette.js"></script>
 	<script src = "js/tools.js"></script>
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
  </head>
  <title>Calculette</title>
   <header>
 	<div class="header">
-		<a href="informations.html">
-			<div id="lienOut">
+		<!-- <a href="informations.html"> -->
+			<div id="lienOut" class="sortieQuestionnaire" redirection="listeInformations.html" dialog="listeInformation">
 				<img id="flecheLien" src="images/rightArrow.png"></img><span id="textOut">Sortir du test</span>
 			</div>
-		</a>
+		<!-- </a> -->
 	</div>
  </header>
  <body>
