--- a/use_case_RH_dev_v1.0/html/choixProspect.html
+++ b/use_case_RH_dev_v1.0/html/choixProspect.html
@@ -13,45 +13,48 @@
  </head>
  <title>Choix du thème du dialogue</title>
  <body>
- 	<div id="alternance" class="boutonIcone">
-		<div class="choixProspect">
-			<img src="images/alternance.png"/>
-		</div>
-		<br>
-		<span>Une alternance</span>
-	</div>
-	 
-	 <div id="stage" class="boutonIcone">
-		<div class="choixProspect">
+ 
+ 	 
+	<div id="stage" class="boutonIcone">
+		<div class="choixProspect" name="stage">
 			<img src="images/stage.png"/>
 		</div>
 		<br>
 		<span>Un stage</span>
 	</div>
-	 
-	 <div id="vie" class="boutonIcone">
-		<div class="choixProspect">
+    
+ 	<div id="alternance" class="boutonIcone">
+		<div class="choixProspect" name="alternance">
+			<img src="images/alternance.png"/>
+		</div>
+		<br>
+		<span>Une alternance</span>
+	</div>
+
+
+	<div id="vie" class="boutonIcone">
+		<div class="choixProspect" name="vie">
 			<img src="images/vie.png"/>
 		</div>
 		<br>
 		<span>Un VIE</span>
 	</div>
-	 
+
 	<div id="cdi" class="boutonIcone">
-		<div class="choixProspect">
+		<div class="choixProspect" name="cdi_cdd">
 			<img src="images/cdi.png"/>
 		</div>
 		<br>
 		<span>Un CDI/CDD</span>
 	</div>
-	 
+
 	<div id="informations" class="boutonIcone">
-		<div class="choixProspect">
+		<div class="choixProspect" name="informations">
 			<img src="images/info.png"/>
 		</div>
 		<br>
 		<span>Des informations<span>
-
+	</div>
 	
  </body>
  <footer>
