--- a/use_case_RH_dev_v1.0/html/domaines/infos/dataScientist.html
+++ b/use_case_RH_dev_v1.0/html/domaines/infos/dataScientist.html
@@ -2,29 +2,32 @@
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="../../js/jquery-3.1.1.min.js"></script>
+    <script src="../../js/ouiNon.js"></script>
+    <script src="../../js/tools.js"></script>
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../css/commun.css">
 	<link rel="stylesheet" type="text/css" href="../../css/infosQuizzs.css">
  </head>
  <title>Data scientist</title>
  <body>
-	<a href="../../listeDomaine.html">
-		<div id="lienRetour">
+	<!-- <a href="../listeDomaineIT.html"> -->
+		<div id="lienRetour" class="dialogable" name="retour">
 				<img id="leftArrow" class="back" src="../../images/leftArrow.png" />
 				<span class="back">Retour</span>
 		</div>
-	</a>
+	<!-- </a> -->
 	
 	<div class="infos left">
 		Sa mission est de traiter et valoriser le "big data", c'est-à-dire les données massives.
 		Sa responsabilité l'amène à établir une stratégie cohérente pour l'entreprise. 
 		Son rôle consiste à gérer les informations entrantes et à les utiliser à des fins commerciales.
-		
 	</div>
 	
-	<a href="../../quizzs/dataScientist.html">
-		<div class="quizzButton right">
-			Faire un quizz sur le métier de Data scientist		
+	<!-- <a href="../../quizzs/dataScientist.html"> -->
+		<div class="quizzButton right dialogable" name="dataScientistQuizz">
+			Faire un quizz sur le métier de Data scientist
 		</div>
-	</a>
+	<!-- </a> -->
  </body>
  </html>
