--- a/use_case_RH_dev_v1.0/html/domaines/infos/dataScientistfinance.html
+++ b/use_case_RH_dev_v1.0/html/domaines/infos/dataScientistfinance.html
@@ -2,12 +2,15 @@
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="../../js/jquery-3.1.1.min.js"></script>
+    <script src="../../js/ouiNon.js"></script>
+    <script src="../../js/tools.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../css/commun.css">
 	<link rel="stylesheet" type="text/css" href="../../css/infosQuizzs.css">
  </head>
  <title>Data scientist</title>
  <body>
-	<a href="../../listeDomainefinance.html">
+	<a href="../listeDomaineFinance.html">
 		<div id="lienRetour">
 				<img id="leftArrow" class="back" src="../../images/leftArrow.png" />
 				<span class="back">Retour</span>
