--- a/use_case_RH_dev_v1.0/html/domaines/infos/innovation.html
+++ b/use_case_RH_dev_v1.0/html/domaines/infos/innovation.html
@@ -2,17 +2,21 @@
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="../../js/jquery-3.1.1.min.js"></script>
+    <script src="../../js/ouiNon.js"></script>
+    <script src="../../js/tools.js"></script>
+    <script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../css/commun.css">
 	<link rel="stylesheet" type="text/css" href="../../css/infosQuizzs.css">
  </head>
  <title>Innovation</title>
  <body>
-	<a href="../../listeDomaine.html">
-		<div id="lienRetour">
+	<!-- <a href="../listeDomaineIT.html"> -->
+		<div id="lienRetour" class="dialogable" name="retour">
 				<img id="leftArrow" class="back" src="../../images/leftArrow.png" />
 				<span class="back">Retour</span>
 		</div>
-	</a>
+	<!-- </a> -->
 	
 	<div class="infos left">
 		Les métiers de l'Architecture, Analyse métier et Innovation contribuent aux analyses et aux élaborations d'architectures, 
@@ -22,10 +26,10 @@
 		
 	</div>
 	
-	<a href="../../quizzs/innovation.html">
-		<div class="quizzButton right">
+	<!-- <a href="../../quizzs/innovation.html"> -->
+		<div class="quizzButton right dialogable" name="innoQuizz">
 			Faire un quizz sur l'innovation		
 		</div>
-	</a>
+	<!-- </a> -->
  </body>
  </html>
