--- a/use_case_RH_dev_v1.0/html/domaines/infos/securite.html
+++ b/use_case_RH_dev_v1.0/html/domaines/infos/securite.html
@@ -2,17 +2,21 @@
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="../../js/jquery-3.1.1.min.js"></script>
+    <script src="../../js/ouiNon.js"></script>
+    <script src="../../js/tools.js"></script>
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../css/commun.css">
 	<link rel="stylesheet" type="text/css" href="../../css/infosQuizzs.css">
  </head>
  <title>Sécurité</title>
  <body>
-	<a href="../../listeDomaine.html">
-		<div id="lienRetour">
+	<!-- <a href="../listeDomaineIT.html"> -->
+		<div id="lienRetour" class="dialogable" name="retour">
 				<img id="leftArrow" class="back" src="../../images/leftArrow.png" />
 				<span class="back">Retour</span>
 		</div>
-	</a>
+	<!-- </a> -->
 	
 	<div class="infos left">
 		La sécurité informatique garantit l'application de la politique sécurité en matière technique, 
@@ -21,10 +25,10 @@
 		
 	</div>
 	
-	<a href="../../quizzs/securite.html">
-		<div class="quizzButton right">
+	<!-- <a href="../../quizzs/securite.html"> -->
+		<div class="quizzButton right dialogable" name="securiteQuizz">
 			Faire un quizz sur la sécurité		
 		</div>
-	</a>
+	<!-- </a> -->
  </body>
  </html>
