--- a/use_case_RH_dev_v1.0/html/ecranAccueilAppli.html
+++ b/use_case_RH_dev_v1.0/html/ecranAccueilAppli.html
@@ -19,7 +19,9 @@
  <title>Ecran accueil</title>
 
  <body>
-    <div id="popup" class="ignore-css"></div>
+<div id="centered">
+ <div id="loader" class="loader"></div>
+ </div>
 	<div class="container demo-3">
 		<div class="content">
 			<div id="large-header" class="large-header">
