--- a/use_case_RH_dev_v1.0/html/franceInternational.html
+++ b/use_case_RH_dev_v1.0/html/franceInternational.html
@@ -14,10 +14,10 @@
  <body>
     <div id="popup"> </div>
 	<div class="pays boutons">
-		<div class="pastilleChoix">France</div>
+		<div class="pastilleChoix" name="france" >france</div>
 	</div>
 	<div class="pays boutons">
-		<div class="pastilleChoix">International</div>
+		<div class="pastilleChoix" name="international">international</div>
 	</div>
  </body>
  </html>
