--- a/use_case_RH_dev_v1.0/html/jeuneSenior.html
+++ b/use_case_RH_dev_v1.0/html/jeuneSenior.html
@@ -5,19 +5,18 @@
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/tools.js"></script>
 	<script src="js/jeuneSenior.js"></script>
-	<!--<script src="/libs/qimessaging/2/qimessaging.js"></script>-->
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/commun.css">
 	<link rel="stylesheet" type="text/css" href="css/deuxChoix.css">
 	<link rel="stylesheet" type="text/css" href="css/arborescenceDialogue.css">
  </head>
  <title>Stage</title>
  <body>
-    <div id="popup"> </div>
 	<div class="pays boutons">
-		<div class="pastilleChoix">Jeune diplômé</div>
+		<div class="pastilleChoix" name="jeune">Jeune diplômé</div>
 	</div>
 	<div class="pays boutons">
-		<div class="pastilleChoix">Sénior</div>
+		<div class="pastilleChoix" name="senior">Sénior</div>
 	</div>
  </body>
  </html>
