--- a/use_case_RH_dev_v1.0/html/quizzs/dataScientist.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/dataScientist.html
@@ -12,7 +12,7 @@
 	 <title>Quizz dataScientist</title>
 	 <body data-nbquestions="7" data-metier="dataScientist">
 		<img id="selonVous" src="../images/entete.png"></img>
-		<img data-quizz="dataScientist" class="sortieQuestionnaire" src="../images/out.png"></img>
+		<img data-quizz="dataScientist" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Combien y a –t-il de data scientists au sein du pôle de Banque de Grande clientèle et Solutions investisseurs (GBIS) ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
@@ -300,13 +300,13 @@
 		</div>
 		<span id="next"></span>
 		
-		<a href="../redirectionRH.html?dataScientist">
-			<div class="redirection">
+		<!-- <a href="../redirectionRH.html?dataScientist"> -->
+			<div class="redirection" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" >
 				Rencontrer un spécialiste de ce domaine
 			</div>
-		</a>
-		<a href="../listeDomaine.html">
-			<img id="out" src="../images/logout.png"></img>
-		</a>
+		<!-- </a> -->
+		<!-- <a href="../listeDomaine.html"> -->
+			<img id="out" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
+		<!-- </a> -->
 	 </body>
  </html>
