--- a/use_case_RH_dev_v1.0/html/quizzs/dataScientistfinance.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/dataScientistfinance.html
@@ -12,7 +12,7 @@
 	 <title>Quizz dataScientist</title>
 	 <body data-nbquestions="7" data-metier="dataScientist">
 	    <a href="../listeDomainefinance.html">
-			<img data-quizz="dataScientist" src="../images/out.png"></img>
+			<img data-quizz="dataScientist" class="sortieQuestionnaire" src="../images/out.png"></img>
 		</a>
 		<img id="selonVous" src="../images/entete.png"></img>
 		
