--- a/use_case_RH_dev_v1.0/html/quizzs/innovation.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/innovation.html
@@ -15,7 +15,7 @@
 	 </header>
 	 <body data-nbquestions="5">
 		<img id="selonVous" src="../images/entete.png"></img>
-		<img data-quizz="securite" class="sortieQuestionnaire" src="../images/out.png"></img>
+		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		
 		<div class="propositionVisible question1">
 			<p class="question"> Qu’appelle-t-on une innovation disruptive ?</p>
@@ -174,12 +174,12 @@
 		</div>
 		<span id="next"></span>
 
-		<div class="redirection">
+		<div class="redirection"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT">
 			Rencontrer un spécialiste de ce domaine
 		</div>
-		<a href="../listeDomaine.html">
-			<img id="out" src="../images/logout.png"></img>
-		</a>
+		<!-- <a href="../listeDomaine.html"> -->
+			<img id="out"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
+		<!-- </a> -->
 	 </body>
 	 <footer>
 		<img id="logo" src="../images/LogoSoge.png"></img>
