--- a/use_case_RH_dev_v1.0/html/quizzs/soge.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/soge.html
@@ -11,9 +11,9 @@
 	 </head>
 	 <title>Quizz Société Générale</title>
 	 <body data-nbquestions="7" data-metier="sogé">
-		<a href="../informations.html">
-			<img data-quizz="sogé"  src="../images/out.png"></img>
-		</a>
+		<!-- <a href="../informations.html"> -->
+			<img data-quizz="sogé" class="exit" redirection="listeInformations.html" dialog="listeInformation" src="../images/out.png"></img>
+		<!-- </a> -->
 		<img id="selonVous" src="../images/entete.png"></img>
 		
 
@@ -267,8 +267,8 @@
 			</div>
 		</div>
 		<span id="next"></span>
-		<a href="../informations.html">
-			<img id="out" src="../images/logout.png"></img>
-		</a>
+		<!-- <a href="../informations.html"> -->
+			<img id="out" redirection="listeInformations.html" dialog="listeInformation" src="../images/logout.png"></img>
+		<!-- </a> -->
 	 </body>
  </html>
