--- a/use_case_RH_dev_v1.0/html/domaines/careersLink.html
+++ b/use_case_RH_dev_v1.0/html/domaines/careersLink.html
@@ -4,6 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src = "../js/qrcode.js"></script>
+    <script src = "../js/ouiNon.js"></script>
+	<script src="../js/tools.js"></script>
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/commun.css">
 	<link rel="stylesheet" type="text/css" href="../css/infosQuizzs.css">
 	<link rel="stylesheet" type="text/css" href="../css/careersLink.css">
@@ -23,12 +26,12 @@
  <title>QRcode Careers</title>
  <body>
 	
-	<a href="../listeDomaine.html">
-		<div id="lienRetour">
+	<!-- <a href="../listeDomaine.html"> -->
+		<div id="lienRetour" class="dialogable" name="retour">
 				<img id="leftArrow" class="back" src="../images/leftArrow.png" />
 				<span class="back">Retour</span>
 		</div>
-	</a>
+	<!-- </a> -->
 
 	<div id="qrcode">
 		Vers careers.com
