--- a/use_case_RH_dev_v1.0/html/domaines/infos/it.html
+++ b/use_case_RH_dev_v1.0/html/domaines/infos/it.html
@@ -2,29 +2,32 @@
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="../../js/jquery-3.1.1.min.js"></script>
+    <script src="../../js/ouiNon.js"></script>
+    <script src="../../js/tools.js"></script>
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../css/commun.css">
 	<link rel="stylesheet" type="text/css" href="../../css/infosQuizzs.css">
  </head>
  <title>IT</title>
  <body>
-	<a href="../../listeDomaine.html">
-		<div id="lienRetour">
+	<!-- <a href="../listeDomaineIT.html"> -->
+		<div id="lienRetour" class="dialogable" name="retour">
 				<img id="leftArrow" class="back" src="../../images/leftArrow.png" />
 				<span class="back">Retour</span>
 		</div>
-	</a>
+	<!-- </a> -->
 	
 	<div class="infos left">
 		Les métiers de l'IT analysent les besoins de l'entreprise en matière de TIC, 
 		réalisent des diagnostics et proposent les grandes orientations technologiques (internet, extranet, intranet, logiciels, applications mobiles ...). 
-		Leur rôle transversal amène à travailler avec de nombreux acteurs de l'organisation et de ses filiales. 
-		
+		Leur rôle transversal amène à travailler avec de nombreux acteurs de l'organisation et de ses filiales.		
 	</div>
 	
-	<a href="../../quizzs/it.html">
-		<div class="quizzButton right">
+	<!-- <a href="../../quizzs/it.html"> -->
+		<div class="quizzButton right dialogable" name="itQuizz">
 			Faire un quizz sur l'IT		
 		</div>
-	</a>
+	<!-- </a> -->
  </body>
  </html>
