--- a/use_case_RH_dev_v1.0/html/exempleRH.html
+++ b/use_case_RH_dev_v1.0/html/exempleRH.html
@@ -2,28 +2,39 @@
  <html lang = "fr">
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/ouiNon.js"></script>
+    <script src="js/tools.js"></script>
+	<script src="/libs/qimessaging/2/qimessaging.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/commun.css">
 	<link rel="stylesheet" type="text/css" href="css/redirectionRH.css">
-	<script src="js/redirectionRH.js"></script>
-	<script src="js/jquery-3.1.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/infosQuizzs.css">
 	<link rel="stylesheet" type="text/css" href="css/listeDomaine.css">
+    
+
  </head>
  <title>Redirection RH</title>
  
  <body>
-	<div class="domaine left">
-	
-		<img src="images/photos_RH/paola_pitault_rh.jpg" alt="paola">
-		Pour plus de renseignement je vous invite à voir Paola Pitault RH présente aujourd'hui sur ce forum
-		
+ <header>
+    <div class="header">
+        <div id="lienRetour" class="dialogable" name="retour">
+                <img id="leftArrow" class="back" src="images/leftArrow.png" />
+                <span class="back">Retour</span>
+        </div>
+    </div>
+ </header>
+
+	<div class="domaine left dialogable">
+		<img src="images/photos_RH/cute_kitten_securite.jpg" class="photo" alt="paola">
+		<!-- Pour plus de renseignement je vous invite à voir Paola Pitault RH présente aujourd'hui sur ce forum -->
+		Pour plus de renseignement je vous invite à voir Mr.Smith non présent aujourd'hui sur ce forum
 	</div>	
 		
-	
-	<div class="domaine right" >
-		<a href="ecranAccueilAppli.html">
+	<div class="domaine right dialogable" name="merci">
+		<!-- <a href="ecranAccueilAppli.html"> -->
 				MERCI!
-		</a>
+		<!-- </a> -->
 	</div>
 	
  </body>
