--- a/use_case_RH_dev_v1.0/html/quizzs/modelisateur.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/modelisateur.html
@@ -12,7 +12,7 @@
 	 <title>Quizz modélisateur</title>
 	 <body data-nbquestions="2" data-metier="modelisateur">
 		<img id="selonVous" src="../images/entete.png"></img>
-		<img data-quizz="modelisateur" class="sortieQuestionnaire" src="../images/out.png"></img>
+		<img data-quizz="modelisateur" class="sortieQuestionnaire"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Quel est le nombre de modèles traités dans l’équipe de modélisation des risques SG?</p>
 			<div class="jeuReponse" data-derniere-question="false">
@@ -177,13 +177,13 @@
 			</div>
 		</div>-->
 		<span id="next"></span>
-		<a href="../redirectionRH.html?modelisateur">
-			<div class="redirection">
+		<!-- <a href="../redirectionRH.html?modelisateur"> -->
+			<div class="redirection" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT">
 				Rencontrer un spécialiste de ce domaine
 			</div>
-		</a>
-		<a href="../listeDomaine.html">
-			<img id="out" src="../images/logout.png"></img>
-		</a>
+		<!-- </a> -->
+		<!-- <a href="../listeDomaine.html"> -->
+			<img id="out"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
+		<!-- </a> -->
 	 </body>
  </html>
